# whizzes-nexus-api

./: .env.sample  Cargo.toml  LICENSE  Procfile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: build.yml  deploy.yml  fmt.yml  migrations.yml
migrations/: 20220429234933_create_extension_uuid.sql  20220429235025_create_table_users.sql  20220505165533_create_table_posts.sql
migrations/2022-02-17-060854_add_uuid_extension/: down.sql  up.sql
migrations/2022-02-17-060925_add_users_table/: up.sql
migrations/2022-04-16-212751_add_posts_table/: up.sql
migrations/2022-04-25-123924_update_posts_table/: up.sql
migrations/2022-04-25-221702_add_users_gender/: down.sql  up.sql
src/: catchers.rs  config.rs  database.rs  error.rs  main.rs  routes.rs  schema.rs  services.rs
src/domain/user/: entity.rs  mod.rs
src/fairings/: cors.rs
src/graphql/: mod.rs  relay.rs
src/graphql/loaders/: mod.rs  user.rs
src/modules/: mod.rs
src/modules/auth/: entity.rs  service.rs
src/modules/auth/graphql/: mutation.rs
src/modules/auth/graphql/mutation/: mod.rs  token_create.rs
src/modules/post/: entity.rs  mod.rs  repository.rs  service.rs
src/modules/post/graphql/: types.rs
src/modules/post/graphql/mutation/: mod.rs  post_create.rs
src/modules/post/graphql/query/: feed.rs  mod.rs  posts.rs
src/modules/user/: entity.rs  mod.rs  repository.rs  service.rs
src/modules/user/graphql/: mutation.rs  query.rs  types.rs
src/modules/user/graphql/mutation/: account_register.rs  mod.rs
src/modules/user/graphql/query/: me.rs  mod.rs  users.rs
src/responders/: cors.rs
