[package]
name = "nexus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
r2d2 = "0.8.9"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
