[package]
name = "nexus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.15", features = ["chrono", "uuid"] }
async-graphql-rocket = "3.0.15"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
jsonwebtoken = "8.0.1"
r2d2 = "0.8.9"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rust-argon2 = "1.0.0"
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
