[package]
name = "nexus-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.38", features = ["chrono", "dataloader", "uuid"] }
async-graphql-rocket = "3.0.38"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
itertools = "0.10.3"
jsonwebtoken = "8.0.1"
rand = "0.8.5"
regex = "1.5.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rust-argon2 = "1.0.0"
sentry = "0.26.0"
serde = "1.0.130"
serde_json = "1.0.68"
sqlx = { version = "0.5", features = [ "chrono", "postgres", "runtime-tokio-rustls", "uuid" ] }
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
